--- a/_config.yml
+++ b/_config.yml
@@ -77,7 +77,7 @@ author:
 # You can reorder the items to define the link order.
 # If you want to add a new link that isn't here, you'll need to also edit the file _data/SocialNetworks.yml
 social-network-links:
-  rss: False
+  rss: true
   email: "181220067@smail.nju.edu.cn"
 #  facebook: daattali
   github: HanXiao112358
@@ -179,8 +179,8 @@ defaults:
       type: "posts"
     values:
       layout: "post"
-      comments: true  # add comments to all blog posts
-      social-share: true # add social media sharing buttons to all blog posts
+      comments: false  # add comments to all blog posts
+      social-share: false # add social media sharing buttons to all blog posts
   -
     scope:
       path: "" # all files
