--- a/_config.yml
+++ b/_config.yml
@@ -77,7 +77,7 @@ author:
 # You can reorder the items to define the link order.
 # If you want to add a new link that isn't here, you'll need to also edit the file _data/SocialNetworks.yml
 social-network-links:
-  rss: False
+  rss: true
   email: "181220067@smail.nju.edu.cn"
 #  facebook: daattali
   github: HanXiao112358
