--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # baseurl is the website's URL without the hostname
 
 # If you are building a simple GitHub user page (https://username.github.io) then use these settings:
-url: "https://HanXiao.github.io/"
+url: "https://hanxiao112358.github.io/HanXiao.github.io/"
 baseurl: "/HanXiao.github.io"
 
 # If you are building a GitHub project page then use these settings:
