change it to my space station

--- a/_config.yml
+++ b/_config.yml
@@ -14,10 +14,10 @@ baseurl: "/SkyWalkerX.github.io"
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: SkyWalkerX's Course Project
+title: SkyWalkerX's Space Station
 
 # Short description of your site
-description: We are so Vegetable!
+description: I am so Vegetable!
 
 # --- Navigation bar options --- #
 
@@ -91,7 +91,7 @@ social-network-links:
 #  instagram: deanat78
 #  youtube: user/deanat78
 #  spotify: yourname
-  telephone: 18112848163
+  telephone: 13615278205
 #  steam: deanat78
 #  twitch: yourname
 #  yelp: yourname
